# ai-chat-extractor

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/development/: CLAUDE.md
docs/technical/: index.md
docs/user/: INSTALL.md
scripts/: ai-chat-rsync.sh  sync-claude-data.sh
src/: __init__.py  codex_metadata.py  codex_parsers.py  conversation_extractor.py  extract_claude_logs.py  formatters.py  interactive_ui.py  metadata.py  parsers.py  realtime_search.py  rsync_launcher.py  search_cli.py  search_conversations.py  source_adapter.py
src/ai_chat_extractor/: codex_metadata.py  codex_parsers.py  conversation_extractor.py  formatters.py  interactive_ui.py  metadata.py  realtime_search.py  rsync_launcher.py  search_cli.py  search_conversations.py  source_adapter.py
src/ai_chat_extractor/_scripts/: ai-chat-rsync
systemd/: ai-chat-extractor.service  ai-chat-extractor.timer  claude-conversation-extractor.service  claude-conversation-extractor.timer
tests/: conftest.py  test_codex_metadata.py  test_codex_parsers.py  test_conversation_extractor_aligned.py  test_conversation_extractor_codex.py  test_downlevel_headings.py  test_error_handling.py  test_extract_claude_logs_aligned.py  test_extract_comprehensive.py  test_extractor.py  test_interactive_ui.py  test_realtime_search_comprehensive.py  test_realtime_search_coverage.py  test_realtime_search_integration.py  test_realtime_search_threading.py  test_realtime_search_ui.py  test_realtime_search_unit.py  test_search.py  test_search_conversations_aligned.py  test_search_integration.py  test_source_adapter.py
tests/fixtures/: sample_codex_conversations.py  sample_conversations.py
