[project]
name = "ai-chat-extractor"
version = "0.2.0"
description = "Extract and search AI coding assistant conversations (Claude Code, OpenAI Codex) from local storage to markdown, JSON, and HTML."
readme = "README.md"
authors = [
    {name = "mmssss"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-extract = "extract_claude_logs:launch_interactive"
ai-search = "search_cli:main"

[dependency-groups]
dev = ["pytest>=7.0", "flake8>=6.0"]
search = ["spacy>=3.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "extract_claude_logs",
    "interactive_ui",
    "search_conversations",
    "realtime_search",
    "search_cli",
    "parsers",
    "metadata",
    "formatters",
    "codex_parsers",
    "codex_metadata",
    "source_adapter",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
