[project]
name = "ai-chat-extractor"
version = "0.2.0"
description = "Extract and search AI coding assistant conversations (Claude Code, OpenAI Codex) from local storage to markdown, JSON, and HTML."
readme = "README.md"
authors = [
    {name = "mmssss"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-extract = "conversation_extractor:launch_interactive"
ai-search = "search_cli:main"
ai-chat-rsync = "rsync_launcher:main"

[dependency-groups]
dev = ["pytest>=7.0", "flake8>=6.0"]
search = ["spacy>=3.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["_rsync_data"]
py-modules = [
    "conversation_extractor",
    "interactive_ui",
    "search_conversations",
    "realtime_search",
    "search_cli",
    "parsers",
    "metadata",
    "formatters",
    "codex_parsers",
    "codex_metadata",
    "source_adapter",
    "rsync_launcher",
]

[tool.setuptools.package-dir]
"" = "src"
_rsync_data = "scripts"

[tool.setuptools.package-data]
_rsync_data = ["*.sh"]
