[project]
name = "ai-chat-extractor"
version = "0.2.0"
description = "Extract and search AI coding assistant conversations (Claude Code, OpenAI Codex) from local storage to markdown, JSON, and HTML."
readme = "README.md"
authors = [
    {name = "mmssss"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-extract = "ai_chat_extractor.conversation_extractor:launch_interactive"
ai-search = "ai_chat_extractor.search_cli:main"
ai-chat-rsync = "ai_chat_extractor.rsync_launcher:main"

[dependency-groups]
dev = ["pytest>=7.0", "flake8>=6.0"]
search = ["spacy>=3.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_chat_extractor._scripts" = ["ai-chat-rsync"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
